Fix: Options text overlapping with the label text on forms. e.g. donation forms donations/ambitious-college-appeal

--- a/docroot/sites/all/themes/ambitious/sass/layouts/pages.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/pages.scss
@@ -688,7 +688,7 @@
 
         .webform-component--donation-checkbox-1, .webform-component--agree-condition--1 {
           label.option p {
-            height: 40px;
+            min-height: 40px;
           }
         }
 
